<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tracking1">

    <RelativeLayout
        android:id="@+id/frame_179"
        android:layout_width="164dp"
        android:layout_height="180dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toTopOf="@+id/component_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toEndOf="@+id/frame_178"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.107">

        <RelativeLayout
            android:id="@+id/frame_174"
            android:layout_width="139dp"
            android:layout_height="37dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="25dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="115dp"
                android:layout_height="18dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:text="July 7 2022  08:00am"
                android:textColor="#EC8000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="19dp"
                android:fontFamily="@font/roboto"
                android:text="Courier requested"
                android:textColor="#A7A7A7"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/tracking_number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/package_status"
        android:textColor=" #A7A7A7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_170"
        app:layout_constraintVertical_bias="0.036" />

    <RelativeLayout
        android:id="@+id/frame_170"
        android:layout_width="195.36dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.02">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/roboto"
            android:text="@string/r_7458_4567_4434_5854"
            android:textColor="#0560FA"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="178dp"
            android:layout_marginBottom="1dp"
            app:srcCompat="@drawable/img_1" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/frame_178"
        android:layout_width="20dp"
        android:layout_height="158dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toTopOf="@+id/component_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.088">

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="20dp"
            android:layout_height="19dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="0dp" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="20dp"
            android:layout_height="19dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="0dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="20dp"
            android:layout_height="19dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/component_2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:clipToOutline="true"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <!-- drawable/rectangle_3.xml -->


        <RelativeLayout
            android:id="@+id/frameTrack"
            android:layout_width="33dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="246dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/textTrack"
                android:layout_width="33dp"
                android:layout_height="14dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/roboto"
                android:lineHeight="14sp"
                android:text="@string/track"
                android:textAlignment="center"
                android:textColor="#0560FA"
                android:textFontWeight="400"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnTrack"
                android:layout_width="39dp"
                android:layout_height="31dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="-4dp"
                android:backgroundTint="#00FFFFFF"
                app:icon="@drawable/btntrack"
                app:iconGravity="textEnd"
                app:iconSize="24sp"
                app:iconTint="#0560FA"
                app:layout_constraintBottom_toTopOf="@+id/textTrack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frameProfile"
            android:layout_width="33dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="360dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/textProfile"
                android:layout_width="33dp"
                android:layout_height="14dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/roboto"
                android:lineHeight="14sp"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="#A7A7A7"
                android:textFontWeight="400"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnProfile"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:backgroundTint="#FFFFFF"
                app:icon="@drawable/profile"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:iconSize="20dp"
                app:iconTint="#A7A7A7" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frameWallet"
            android:layout_width="33dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="246dp"
            android:layout_marginBottom="16dp">


            <Button
                android:id="@+id/Wallet"
                android:layout_width="39dp"
                android:layout_height="31dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="-4dp"
                android:backgroundTint="#00FFFFFF"
                app:icon="@drawable/wallet"
                app:iconGravity="textEnd"
                app:iconSize="24sp"
                app:iconTint="#A7A7A7"
                app:layout_constraintBottom_toTopOf="@+id/textWallet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textWallet"
                android:layout_width="33dp"
                android:layout_height="14dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/roboto"
                android:lineHeight="14sp"
                android:text="@string/wallet"
                android:textAlignment="center"
                android:textColor="#A7A7A7"
                android:textFontWeight="400"
                android:textSize="12sp" />

        </RelativeLayout>

        <View
            android:id="@+id/rectangle_3"
            android:layout_width="42dp"
            android:layout_height="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="243dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="126dp"
            android:background="@drawable/img"
            android:elevation="2dp" />

        <RelativeLayout
            android:id="@+id/frameHome"
            android:layout_width="33dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="360dp"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/Home"
                android:layout_width="39dp"
                android:layout_height="31dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="-4dp"
                android:backgroundTint="#00FFFFFF"
                android:text=""
                app:icon="@drawable/home"
                app:iconGravity="textEnd"
                app:iconSize="24sp"
                app:iconTint="#A7A7A7"
                app:layout_constraintBottom_toTopOf="@+id/textHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textHome"
                android:layout_width="33dp"
                android:layout_height="14dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/roboto"
                android:lineHeight="14sp"
                android:text="Home"
                android:textAlignment="center"
                android:textColor="#A7A7A7"
                android:textFontWeight="400"
                android:textSize="12sp" />

        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="263dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mapa" />

    <Button
        android:id="@+id/Packinfo"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#0560FA"
        android:text="@string/view_package_info"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/component_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_179"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>